--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,7 +29,7 @@
 							<div class="features-row">
 								{{ range $index, $key := $tiles}}
 									<section>
-										{{ if $key.url }}<a href="{{ $key.url | absURL }}"><div>{{ end }}
+										{{ if $key.url }}<a href="{{ $key.url | relURL }}"><div>{{ end }}
 											<span class="icon major {{ $key.icon_pack }} {{ $key.icon }} accent{{- $key.accent -}}"></span>
 											<h3>{{ $key.title }}</h3>
 											<p>{{ $key.text | markdownify }}</p>
