--- a/layouts/index.html
+++ b/layouts/index.html
@@ -52,12 +52,12 @@
 							{{ range $index, $key := $tiles }}
 								<div class="col-6 col-12-narrower">
 									<section class="box special">
-										<span class="image featured"><img src="{{ $key.image | absURL}}" alt="" /></span>
+										<span class="image featured"><img src="{{ $key.image | relÆURL}}" alt="" /></span>
 										<h3>{{ $key.title }}</h3>
 										<p>{{ $key.text | markdownify }}</p>
 										{{ if $key.button_text }}
 											<ul class="actions special">
-												<li><a href="{{ $key.url | absURL }}" class="button alt">{{ $key.button_text }}</a></li>
+												<li><a href="{{ $key.url | relURL }}" class="button alt">{{ $key.button_text }}</a></li>
 											</ul>
 											{{ end }}
 										</section>
